# log-engine-v1

./: Cargo.toml  LICENSE.md  README.md
config/: benchmark_config.yaml  config.yaml
examples/: basic_usage.rs  benchmark.rs
src/: config.rs  lib.rs  logger.rs  macros.rs  metrics.rs  security.rs  utils.rs
src/formatters/: json_formatter.rs  mod.rs  text_formatter.rs
src/handlers/: console_handler.rs  file_handler.rs  memory_handler.rs  mod.rs  remote_handler.rs
src/tests/: integration_tests.rs  unit_tests.rs
