[package]
name = "log-engine-v1"
version = "0.1.0"
edition = "2021"
authors = ["Arshad <arshadbarves@gmail.com>"]
description = "An advanced, high-performance logging system for Rust applications."
license = "MIT"
repository = "https://github.com/yourusername/log_engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "1.0"
aes = "0.8"
sha2 = "0.10"
base64 = "0.21"
flate2 = "1.0"
crossbeam = "0.8"
regex = "1.10.6"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3